syntax = "proto3";

// build *.pb.go from project root
// protoc -I. --go_out=plugins=grpc,paths=source_relative:/home/comunodi/sky cloud/proto/*.proto

package cloud;

option go_package = "github.com/dc-lab/sky/cloud/proto";

message THardwareData {
  uint32 cores_count = 1;
  uint64 memory_bytes = 2;
  uint64 disk_bytes = 3;
}

message TResult {
  enum TResultCode {
    NONE = 0;
    WAIT = 1;
    RUN = 2;
    FAILED = 3;
    SUCCESS = 4;
  }

  enum TErrorCode {
    UNKNOWN = 0;
    INTERNAL = 1;
    INVALID_ARGUMENT = 2;
    UNAUTHENTICATED = 3;
    UNAUTHORIZED = 4;
    NOT_IMPLEMENTED = 5;
  }

  TResultCode result_code = 1;
  TErrorCode error_code = 2;
}
